# finitelycomputable-microsites

./: .build.yml  .gitignore  Makefile  README.md  docker-compose.yaml  finitely_computable_microsites_setup.py  finitelycomputable_microsites_setup.py  fullname.awk  manage.py  pyproject-gen.awk  sdistname.awk  setup-gen.awk  setup.sh  tox.ini  wheelname.awk
.builds/: ubuntu-lts.yml  ubuntu-oldlts.yml
cherrypy-mount/: README.rst  pyproject.toml  setup.py
dj_hobby/: settings.py  urls.py  wsgi.py
django-apps/: README.rst  manage.py  pyproject.toml  setup.py
django-apps/finitelycomputable/django_apps/: __init__.py  asgi.py  entry_points.py  pythonanywhere-wsgi.py  settings.py  tests.py  urls.py  wsgi.py
django-apps/finitelycomputable/django_apps/settings/: base.py  dev.py  linode.py  nearlyfreespeech.py  pythonanywhere.py
dockerfiles/: released
falcon-addroute/: README.rst  pyproject.toml  setup.py
falcon-addroute/finitelycomputable/: falcon_addroute.py
falcon-addroute/finitelycomputable/tests/: test_falcon_addroute.py
finitelycomputable-tests/: README.rst  pyproject.toml
flask-blueprints/: README.rst  pyproject.toml  setup.py
flask-dispatcher/: README.rst  pyproject.toml  setup.py
flask-dispatcher/finitelycomputable/: flask_dispatcher.py
flask-dispatcher/finitelycomputable/tests/: test_flask_dispatcher.py
fragments_of_tests/: head_idtrust_falcon.py  head_idtrust_flask.py  tail_idtrust.py
helloworld-cherrypy/: README.rst  pyproject.toml  setup.py
helloworld-cherrypy-falcon/: README.rst  pyproject.toml  setup.py
helloworld-cherrypy-flask/: README.rst  pyproject.toml  setup.py
helloworld-cherrypy-morepath/: README.rst  pyproject.toml  setup.py
helloworld-cherrypy-quart/: README.rst  pyproject.toml  setup.py
helloworld-django/: README.rst  pyproject.toml  setup.py  tox.ini
helloworld-falcon/: README.rst  pyproject.toml  setup.py  tox.ini
helloworld-falcon-cherrypy/: README.rst  pyproject.toml  setup.py  tox.ini
helloworld-falcon-flask/: README.rst  pyproject.toml  setup.py  tox.ini
helloworld-falcon-morepath/: README.rst  pyproject.toml  setup.py  tox.ini
helloworld-falcon-quart/: README.rst  pyproject.toml  setup.py
helloworld-flask/: README.rst  pyproject.toml  setup.py  tox.ini
helloworld-flask-cherrypy/: README.rst  pyproject.toml  setup.py  tox.ini
helloworld-flask-falcon/: README.rst  pyproject.toml  setup.py  tox.ini
helloworld-flask-morepath/: README.rst  pyproject.toml  setup.py  tox.ini
helloworld-flask-quart/: README.rst  pyproject.toml  setup.py
helloworld-flask/finitelycomputable/: helloworld_flask.py
helloworld-flask/finitelycomputable/tests/: test_helloworld_flask.py
helloworld-morepath/: README.rst  pyproject.toml  setup.py  tox.ini
helloworld-morepath-cherrypy/: README.rst  pyproject.toml  setup.py  tox.ini
helloworld-morepath-falcon/: README.rst  pyproject.toml  setup.py  tox.ini
helloworld-morepath-falcon/finitelycomputable/: helloworld_morepath.py
helloworld-morepath-flask/: README.rst  pyproject.toml  setup.py  tox.ini
helloworld-morepath-quart/: README.rst  pyproject.toml  setup.py
helloworld-quart/: README.rst  pyproject.toml  setup.py  tox.ini
helloworld-quart-cherrypy/: README.rst  pyproject.toml  setup.py
helloworld-quart-falcon/: README.rst  pyproject.toml  setup.py
helloworld-quart-flask/: README.rst  pyproject.toml  setup.py
helloworld-quart-morepath/: README.rst  pyproject.toml  setup.py
helloworld-quart-morepath/finitelycomputable/: helloworld_quart.py
id_trust/: MANIFEST.in  README.rst  admin.py  setup.py  views.py
idtrust-app-falcon/: README.rst  pyproject.toml
idtrust-app-flask/: README.rst  pyproject.toml  setup.py
idtrust-common/: MANIFEST.in  README.rst  pyproject.toml  setup.py
idtrust-common/finitelycomputable/idtrust_common/: helpers_for_tests.py  logic.py  strategies.py
idtrust-common/finitelycomputable/idtrust_common/templates/: exchange_form.html  interaction.html  interaction_begin.html
idtrust-db-peewee/: README.rst  finitelycomputable_microsites_setup.py  pyproject.toml  setup.py
idtrust-django/: README.rst  pyproject.toml  setup.py
idtrust-falcon-peewee/: README.rst  pyproject.toml
idtrust-flask/: setup.py
idtrust-flask-peewee/: README.rst  db-peewee.py  pyproject.toml  setup.py
idtrust-flask-peewee/finitelycomputable/: idtrust_flask_peewee.py
idtrust-flask-peewee/finitelycomputable/idtrust_flask/: __init__.py  peewee.py
idtrust-flask-peewee/finitelycomputable/idtrust_flask_peewee/: __init__.py
morepath-mount/: README.rst  pyproject.toml  setup.py
morepath-mount/finitelycomputable/: morepath_mount.py
morepath-mount/finitelycomputable/tests/: test_morepath_mount.py
omnibus/: README.rst  base-req.txt  bjoern-server.py  cherry-server.py  dev-req.txt  finitely_computable_microsites_setup.py  manage.py  requires.txt  setup.py
precious/: finitelycomputable_idtrust_common-26.2-py3-none-any.whl
pyproject/: all  cherrypy  cherrypy-mount  django  django-apps  falcon  falcon-addroute  finitelycomputable-tests  flask  flask-blueprints  flask-dispatcher  helloworld-cherrypy  helloworld-cherrypy-falcon  helloworld-cherrypy-flask  helloworld-cherrypy-morepath  helloworld-cherrypy-quart  helloworld-django  helloworld-falcon  helloworld-falcon-cherrypy  helloworld-falcon-flask  helloworld-falcon-morepath  helloworld-falcon-quart  helloworld-flask  helloworld-flask-cherrypy  helloworld-flask-falcon  helloworld-flask-morepath  helloworld-flask-quart  helloworld-morepath  helloworld-morepath-cherrypy  helloworld-morepath-falcon  helloworld-morepath-flask  helloworld-morepath-quart  helloworld-quart  helloworld-quart-cherrypy  helloworld-quart-falcon  helloworld-quart-flask  helloworld-quart-morepath  idtrust-app-falcon  idtrust-app-flask  idtrust-common  (+11 more)
requirements/: cherrypy-adapters.txt  cherrypy-cycle.txt  dev-cherrypy-adapters.txt  dev-cherrypy-cycle.txt  dev-direct.txt  dev-falcon-adapters.txt  dev-falcon-cycle.txt  dev-flask-adapters.txt  dev-flask-cycle.txt  dev-morepath-adapters.txt  dev-morepath-cycle.txt  dev-unadapted.txt  (+16 more)
(+165 files in other folders)
