[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [{name = "Samuel Newbold", email = "sam@rwsh.org"}]
license = {text = "AGPL-3.0-only"}
readme = "README.rst"
version = "24.3"
name = "finitelycomputable-morepath-mount"
requires-python = ">=3.8"
description = "The Morepath-based wsgi app using Morepath.mount to combine the microsites of finitelycomputable.net"
dependencies = [
  "morepath~=0.19",
]
classifiers = [
  "Topic :: Internet :: WWW/HTTP :: WSGI",
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.optional-dependencies]
tests = ["webtest",
  "pytest", "pytest-env"]
waitress = ["waitress~=2.1"]
cherrypy = ["cherrypy~=18.0"]
cheroot = ["cheroot~=9.0"]
bjoern = ["bjoern~=3.0"]
helloworld = ["finitelycomputable-helloworld-morepath"]
gunicorn = ["gunicorn~=21.2"]

[project.scripts]
finitelycomputable-morepath-mount = "finitelycomputable.morepath_mount:run"

[project.urls]
Homepage = "https://www.finitelycomputable.net/wsgi_info"
Documentation = "https://github.com/thrasymache/microsites"
Source = "https://github.com/thrasymache/microsites"
Gitlab = "https://gitlab.com/thrasymache/microsites"
sourcehut = "https://git.sr.ht/~thrasymache/finitelycomputable-microsites"
NotABug = "https://notabug.org/thrasymache/finitelycomputable-microsites"
